Add cctv delete
